[package]
name = "ngrams"
version = "0.1.1"
authors = ["Paul Woolcock <paul@woolcock.us>"]
repository = "https://github.com/pwoolcoc/ngrams.git"
homepage = "https://pwoolcoc.github.io/ngrams"
license = "MIT"
readme = "README.md"
documentation = "https://pwoolcoc.github.io/ngrams"
description = """
Generate n-grams from sequences
"""

[dependencies]
clippy = { version = "0.0.23", optional = true }

[features]
default = []
dev = ["clippy"]
