[package]
name = "ngrams"
version = "1.0.1"
authors = ["Paul Woolcock <paul@woolcock.us>"]
repository = "https://gitlab.com/pwoolcoc/ngrams.git"
homepage = "https://pwoolcoc.gitlab.io/ngrams/ngrams/"
license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "https://pwoolcoc.gitlab.io/ngrams"
description = """
Generate n-grams from sequences
"""

[dependencies]
clippy = { version = "0.0.23", optional = true }

[features]
default = []
dev = ["clippy"]

[dev-dependencies]
rand = "^0.3.12"
flate2 = "^0.2.11"
curl = "^0.3.5"
